--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1>Disclaimer</h1>
         <ul>
           <li>Everything might change</li>
-          <li>Check respective licenses(MIT & Apache2)</li>
+          <li>Check respective licenses</li>
         </ul>
       </section>
 
@@ -226,17 +226,22 @@
         <h2>Available object types</h2>
         <p><b>AFF is specified for:</b> AOBJ, APIC, APLO, CFDF, CHDO, CHKC, CHKO, CHKV, CLAS, DDLS, DDLX, DMON, DOMA, DSFI, EEEC,
           ENHO, ENHS, EVTB, FUGR, GSMP, INTF, NROB, RONT, SAJC, SAJT, SCP1, SITO, SMBC, SPRV, SRVB</p>
-        <p><b>abapGit supports:</b> CHKC, CHKO, CHKV, EVTC, NONT, RONT, SMBC, INTF (experimental)</p>
+        <p><b>abapGit supports(via <a href="https://github.com/sbcgua/ajson">ajson</a>):</b> CHKC, CHKO, CHKV, EVTC, NONT, RONT, SMBC, INTF (experimental)</p>
         <p>SAP Basis 7.56 and newer provides serializer</p>
+        <p>Focus is on JSON for new Object Types</p>
+      </section>
+
+      <section>
+        <h2 class="fixed">BREAK-POINT.</h2>
       </section>
 
       <section>
         <h2>abapGit activation</h2>
         <ul>
           <li>Can be tested via "experimental" switch</li>
-          <li>Will be enabled when no information is lost(<a href="https://github.com/SAP/abap-file-formats/issues/106">translations</a>)</li>
+          <li>Will be enabled when no information is lost(<a href="https://github.com/SAP/abap-file-formats/issues/106">translations</a> and long text)</li>
           <li>Pull old format, stage new format</li>
-          <li>Still 702 and up</li>
+          <li>Still 702 and up(if object works on the system)</li>
         </ul>
       </section>
 
@@ -257,7 +262,7 @@
 
       <section>
         <h2>Automated Schema Generation</h2>
-        for everyone in the world<br>
+        for everyone in the world, LINK?<br>
         <img src="./img/schemas2.drawio.svg" class="plain">
       </section>
 
@@ -273,6 +278,7 @@ list, todo
           <li><a href="https://github.com/SAP/abap-file-formats-tools">github.com/SAP/abap-file-formats-tools</a></li>
           <li><a href="https://abapgit.org">abapgit.org</a></li>
           <li><a href="https://abaplint.org">abaplint.org</a></li>
+          <li><a href="https://github.com/sbcgua/ajson">ajson</a></li>
         </ul>
       </section>
 
