--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@ list, todo
         <ul>
           <li><a href="https://github.com/SAP/abap-file-formats">github.com/SAP/abap-file-formats</a></li>
           <li><a href="https://github.com/SAP/abap-file-formats-tools">github.com/SAP/abap-file-formats-tools</a></li>
+          <li><a href="https://github.com/sbcgua/ajson">github.com/sbcgua/ajson</a></li>
           <li><a href="https://abapgit.org">abapgit.org</a></li>
           <li><a href="https://abaplint.org">abaplint.org</a></li>
-          <li><a href="https://github.com/sbcgua/ajson">ajson</a></li>
         </ul>
       </section>
 
