--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       </section>
 
       <section>
-        <ul>
-          <li>Albert Mink, <a href="https://sap.com">@SAP</a></li>
-          <li>Lars Hvam, <a href="https://heliconialabs.com">@heliconialabs</a></li>
-        </ul>
+        <table><tr><td>
+          <p>Albert Mink, <a href="https://sap.com">@SAP</a></p>
+          <p>Lars Hvam, <a href="https://heliconialabs.com">@heliconialabs</a></p>
+        </td></tr></table>
       </section>
 
       <section>
