--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@
         <h2>Schema Generation</h2>
         from ABAP in ABAP<br>
         <img src="./img/schemas1.drawio.svg" class="plain">
+        <br>
+        <a href="https://github.com/SAP/abap-file-formats-tools">github.com/SAP/abap-file-formats-tools</a>
       </section>
 
       <section>
