shorten object list

--- a/index.html
+++ b/index.html
@@ -224,11 +224,10 @@
 
       <section>
         <h2>Available object types</h2>
-        <p><b>AFF is specified for:</b> AOBJ, APIC, APLO, CFDF, CHDO, CHKC, CHKO, CHKV, CLAS, DDLS, DDLX, DMON, DOMA, DSFI, EEEC,
-          ENHO, ENHS, EVTB, FUGR, GSMP, INTF, NROB, RONT, SAJC, SAJT, SCP1, SITO, SMBC, SPRV, SRVB</p>
-        <p><b>abapGit supports(via <a href="https://github.com/sbcgua/ajson">ajson</a>):</b> CHKC, CHKO, CHKV, EVTC, NONT, RONT, SMBC, INTF (experimental)</p>
+        <p>AFF specifies more than 27 object types</p>
+        <p>abapGit supports: CHKC, CHKO, CHKV, EVTC, NONT, RONT, SMBC, INTF (experimental and via <a href="https://github.com/sbcgua/ajson">ajson</a>)</p>
+        <p>abapGit focuses on AFF for new object types</p>
         <p>SAP Basis 7.56 and newer provides serializer</p>
-        <p>Focus is on JSON for new Object Types</p>
       </section>
 
       <section>
