--- a/index.html
+++ b/index.html
@@ -201,6 +201,38 @@
 </script></code></pre>
         </section>
 
+        <section>
+          <h2>Metadata file in gCTS</h2>
+
+          The database entries as JSON data
+          <pre><code data-trim data-noescape>
+          ...
+          {
+            "table":"SEOCLASS",
+            "data": [
+              {
+                "CLSNAME": "ZIF_ABAPGIT_AFF_INTF_V1",
+                "CLSTYPE": 1,
+                "UUID": "UFasYpQe2oXTzfV/dFel",
+                "REMOTE": ""
+              }
+            ]
+          },
+          {
+            "table": "SEOCLASSDF",
+            "data": [
+            {
+              "CLSNAME": "ZIF_ABAPGIT_AFF_INTF_V1",
+              "VERSION": 1,
+              "CATEGORY": 0,
+              "EXPOSURE": 2,
+              "STATE": 1,
+              "RELEASE": 0,
+              "AUTHOR": "MR_X",
+          ...
+          </code></pre>
+        </section>
+
       </section>
 
       <section>
@@ -215,7 +247,6 @@
           <div class="col">
             <p>abapGit</p>
             <img src="./img/abapgit_chkv.png" class="plain">
-            <p>gCTS</p>
           </div>
         </div>
       </section>
