fit gCTS example JSON data selection

--- a/index.html
+++ b/index.html
@@ -208,13 +208,12 @@
           <pre><code data-trim data-noescape>
           ...
           {
-            "table":"SEOCLASS",
+            "table": "SEOCLASSTX",
             "data": [
               {
                 "CLSNAME": "ZIF_ABAPGIT_AFF_INTF_V1",
-                "CLSTYPE": 1,
-                "UUID": "UFasYpQe2oXTzfV/dFel",
-                "REMOTE": ""
+                "LANGU": "E",
+                "DESCRIPT": "AFF: Interface v1"
               }
             ]
           },
