--- a/index.html
+++ b/index.html
@@ -275,25 +275,29 @@
 
       <section>
         <h2>abapGit migration</h2>
-        handling old xml files => automatic conversion
-<br><br>
-        automated standalone migration path
-<br><br>
-        100s of xmls, takes time
+        <ul>
+          <li>Ongoing for long time, also before AFF</li>
+          <li>Pull old format, stage new format</li>
+          <li>Automated opening of PRs with updates on GitHub</li>
+        </ul>
       </section>
 
       <section>
         <h2>Schema Generation</h2>
         from ABAP in ABAP<br>
-        <img src="./img/schemas1.drawio.svg" class="plain">
+        <img src="./img/schemas1.drawio.svg" height="200px">
         <br>
         <a href="https://github.com/SAP/abap-file-formats-tools">github.com/SAP/abap-file-formats-tools</a>
       </section>
 
       <section>
         <h2>Automated Schema Generation</h2>
-        for everyone in the world, LINK?<br>
-        <img src="./img/schemas2.drawio.svg" class="plain">
+        <img src="./img/schemas2.drawio.svg" height="600px" class="nomargin">
+      </section>
+
+      <section>
+        <h2>Web!</h2>
+        <a href="https://larshp.github.io/aff-web">larshp.github.io/aff-web</a>
       </section>
 
       <section>
