--- a/index.html
+++ b/index.html
@@ -275,25 +275,91 @@
 
       <section>
         <h2>abapGit migration</h2>
-        handling old xml files => automatic conversion
-<br><br>
-        automated standalone migration path
-<br><br>
-        100s of xmls, takes time
+        <ul>
+          <li>Ongoing for long time, also before AFF</li>
+          <li>Pull old format, stage new format</li>
+          <li>Automated opening of PRs with updates on GitHub</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Schema</h2>
+        <pre><code data-trim data-noescape><script type="text/template">
+INTERFACE zif_aff_intf_v1 PUBLIC.
+
+  "! <p class="shorttext">Interface Category</p>
+  "! Interface category
+  "! $values {@link zif_aff_intf_v1.data:co_category}
+  TYPES ty_category TYPE n LENGTH 2.
+
+  CONSTANTS:
+    "! <p class="shorttext">Interface Category</p>
+    "! Interface category
+    BEGIN OF co_category,
+      "! <p class="shorttext">General</p>
+      "! General interface
+      general                      TYPE ty_category VALUE '00',
+      "! <p class="shorttext">Classic BAdI</p>
+      "! Interface definition of a classic BAdI
+      classic_badi                 TYPE ty_category VALUE '01',
+      "! <p class="shorttext">Business (Static Components)</p>
+      "! Business interface for static components
+      business_static_components   TYPE ty_category VALUE '51',
+      "! <p class="shorttext">Business (Instance-dep. components)</p>
+      "! Business interface for instance-dependent components
+      business_instance_components TYPE ty_category VALUE '52',
+      "! <p class="shorttext">DB Procedure Proxy</p>
+      "! Generated interface of a database procedure proxy
+      db_procedure_proxy           TYPE ty_category VALUE '65',
+      "! <p class="shorttext">Web Dynpro Runtime</p>
+      "! Web Dynpro runtime interface
+      web_dynpro_runtime           TYPE ty_category VALUE '80',
+      "! <p class="shorttext">Enterprise Services</p>
+      "! Generated interface of enterprise services
+      enterprise_service           TYPE ty_category VALUE '90',
+    END OF co_category.
+
+  TYPES:
+    "! <p class="shorttext">Interface Properties</p>
+    "! Interface properties
+    BEGIN OF ty_main,
+      "! $required
+      format_version TYPE zif_aff_types_v1=>ty_format_version,
+      "! <p class="shorttext">Header</p>
+      "! Header
+      "! $required
+      header         TYPE zif_aff_types_v1=>ty_header_60_src,
+      "! <p class="shorttext">Interface Category</p>
+      "! Interface category
+      category       TYPE ty_category,
+      "! <p class="shorttext">Proxy Interface</p>
+      "! Interface is a proxy interface
+      proxy          TYPE abap_bool,
+      "! <p class="shorttext">Descriptions</p>
+      "! Descriptions maintained in SE80
+      descriptions   TYPE zif_aff_oo_types_v1=>ty_descriptions,
+    END OF ty_main.
+
+ENDINTERFACE.</script></code></pre>
       </section>
 
       <section>
         <h2>Schema Generation</h2>
         from ABAP in ABAP<br>
-        <img src="./img/schemas1.drawio.svg" class="plain">
+        <img src="./img/schemas1.drawio.svg" height="200px">
         <br>
         <a href="https://github.com/SAP/abap-file-formats-tools">github.com/SAP/abap-file-formats-tools</a>
       </section>
 
       <section>
         <h2>Automated Schema Generation</h2>
-        for everyone in the world, LINK?<br>
-        <img src="./img/schemas2.drawio.svg" class="plain">
+        <img src="./img/schemas2.drawio.svg" height="600px" class="nomargin">
+      </section>
+
+      <section>
+        <h2>JSON Schema Generation</h2>
+        ABAP logic running in browser,<br>
+        <a href="https://larshp.github.io/aff-web">larshp.github.io/aff-web</a>
       </section>
 
       <section>
