hide horizontal overflow

--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
       </section>
 
       <section>
-        <h2>Schema</h2>
-        <pre><code data-trim data-noescape><script type="text/template">
+        <h2>Schema in ABAP</h2>
+        <pre><code data-trim data-noescape class="hide-horizontal-overflow"><script type="text/template">
 INTERFACE zif_aff_intf_v1 PUBLIC.
 
   "! <p class="shorttext">Interface Category</p>
