--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     "interface": "IF_WB_OBJECT_VERSION_PROVIDER",
                     "instantiation": "creatingNewInstances",
                     "multipleUse": false,
-                    "fallbackClass": "CL_BLUE_TLOGO_VERSION_PROVIDER",
+                    "fallbackClass": "CL_BLUE_SVRS_VERSION_PROVIDER",
                     "filters": [
                       {
                         "name": "OBJECT_TYPE",
@@ -254,7 +254,7 @@
       <section>
         <h2>Available object types</h2>
         <p>AFF specifies more than 27 object types</p>
-        <p>abapGit supports: CHKC, CHKO, CHKV, EVTC, NONT, RONT, SMBC, INTF (experimental and via <a href="https://github.com/sbcgua/ajson">ajson</a>)</p>
+        <p>abapGit supports: CHKC, CHKO, CHKV, EVTB, NONT, RONT, SMBC, INTF (experimental and via <a href="https://github.com/sbcgua/ajson">ajson</a>)</p>
         <p>abapGit focuses on AFF for new object types</p>
         <p>SAP Basis 7.56 and newer provides serializer</p>
       </section>
