--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
       <section>
         <h2>Available object types</h2>
         <p>AFF specifies more than 27 object types</p>
-        <p>abapGit supports: CHKC, CHKO, CHKV, EVTB, NONT, RONT, SMBC, INTF (experimental and via <a href="https://github.com/sbcgua/ajson">ajson</a>)</p>
+        <p>SAP Basis 7.56 and newer provides serializers</p>
+        <p>abapGit supports: INTF (experimental and via <a href="https://github.com/sbcgua/ajson">ajson</a>), ATC Check Variants (CHKV), RAP Business Event Bindings (EVTB), ...</p>
         <p>abapGit focuses on AFF for new object types</p>
-        <p>SAP Basis 7.56 and newer provides serializer</p>
       </section>
 
       <section>
